[gd_scene load_steps=2 format=3 uid="uid://dkr8x2qw7m3np"]

[ext_resource type="Script" path="res://examples/crossword/crossword.gd" id="1_cw"]

[node name="Crossword" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.11, 0.18, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Layout" type="HBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LeftSide" type="VBoxContainer" parent="Margin/Layout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Margin/Layout/LeftSide"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Crossword"

[node name="GridContainer" type="GridContainer" parent="Margin/Layout/LeftSide"]
layout_mode = 2
columns = 10

[node name="RightSide" type="VBoxContainer" parent="Margin/Layout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ClueScroll" type="ScrollContainer" parent="Margin/Layout/RightSide"]
layout_mode = 2
size_flags_vertical = 3

[node name="Clues" type="VBoxContainer" parent="Margin/Layout/RightSide/ClueScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="AcrossTitle" type="Label" parent="Margin/Layout/RightSide/ClueScroll/Clues"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ACROSS"

[node name="AcrossClues" type="VBoxContainer" parent="Margin/Layout/RightSide/ClueScroll/Clues"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Sep" type="HSeparator" parent="Margin/Layout/RightSide/ClueScroll/Clues"]
layout_mode = 2

[node name="DownTitle" type="Label" parent="Margin/Layout/RightSide/ClueScroll/Clues"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "DOWN"

[node name="DownClues" type="VBoxContainer" parent="Margin/Layout/RightSide/ClueScroll/Clues"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatusLabel" type="Label" parent="Margin/Layout/RightSide"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Margin/Layout/RightSide"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="CheckButton" type="Button" parent="Margin/Layout/RightSide/Buttons"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Check Answers"

[node name="NewButton" type="Button" parent="Margin/Layout/RightSide/Buttons"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "New Puzzle"
